libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/access-field-literal-boolean.jsonc
//@ run: fail
//@ description: Field access with boolean literal should error
["::kernel::special_form::access", "data", {"#literal": true}]
//~^ ERROR Use an integer literal here
